libqt6c/src/libqimage.hpp

typedef struct QColor QColor;
typedef struct QColorSpace QColorSpace;
typedef struct QColorTransform QColorTransform;
typedef struct QIODevice QIODevice;
typedef struct QImage QImage;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QSizeF QSizeF;
typedef struct QTransform QTransform;
QImage* QImage_new();
QImage* QImage_new2(const QSize* size, int format);
QImage* QImage_new3(int width, int height, int format);
QImage* QImage_new4(unsigned char* data, int width, int height, int format);
QImage* QImage_new5(const unsigned char* data, int width, int height, int format);
QImage* QImage_new6(unsigned char* data, int width, int height, ptrdiff_t bytesPerLine, int format);
QImage* QImage_new7(const unsigned char* data, int width, int height, ptrdiff_t bytesPerLine, int format);
QImage* QImage_new8(const char** xpm);
QImage* QImage_new9(const libqt_string fileName);
QImage* QImage_new10(const QImage* param1);
QImage* QImage_new11(unsigned char* data, int width, int height, int format, intptr_t cleanupFunction);
QImage* QImage_new12(unsigned char* data, int width, int height, int format, intptr_t cleanupFunction, void* cleanupInfo);
QImage* QImage_new13(const unsigned char* data, int width, int height, int format, intptr_t cleanupFunction);
QImage* QImage_new14(const unsigned char* data, int width, int height, int format, intptr_t cleanupFunction, void* cleanupInfo);
QImage* QImage_new15(unsigned char* data, int width, int height, ptrdiff_t bytesPerLine, int format, intptr_t cleanupFunction);
QImage* QImage_new16(unsigned char* data, int width, int height, ptrdiff_t bytesPerLine, int format, intptr_t cleanupFunction, void* cleanupInfo);
QImage* QImage_new17(const unsigned char* data, int width, int height, ptrdiff_t bytesPerLine, int format, intptr_t cleanupFunction);
QImage* QImage_new18(const unsigned char* data, int width, int height, ptrdiff_t bytesPerLine, int format, intptr_t cleanupFunction, void* cleanupInfo);
QImage* QImage_new19(const libqt_string fileName, const char* format);
void QImage_OperatorAssign(QImage* self, const QImage* param1);
void QImage_Swap(QImage* self, QImage* other);
bool QImage_IsNull(const QImage* self);
int QImage_DevType(const QImage* self);
bool QImage_OperatorEqual(const QImage* self, const QImage* param1);
bool QImage_OperatorNotEqual(const QImage* self, const QImage* param1);
void QImage_Detach(QImage* self);
bool QImage_IsDetached(const QImage* self);
QImage* QImage_Copy(const QImage* self);
QImage* QImage_Copy2(const QImage* self, int x, int y, int w, int h);
int QImage_Format(const QImage* self);
QImage* QImage_ConvertToFormat(const QImage* self, int f);
QImage* QImage_ConvertToFormat2(const QImage* self, int f, const libqt_list /* of unsigned int */ colorTable);
bool QImage_ReinterpretAsFormat(QImage* self, int f);
QImage* QImage_ConvertedTo(const QImage* self, int f);
void QImage_ConvertTo(QImage* self, int f);
int QImage_Width(const QImage* self);
int QImage_Height(const QImage* self);
QSize* QImage_Size(const QImage* self);
QRect* QImage_Rect(const QImage* self);
int QImage_Depth(const QImage* self);
int QImage_ColorCount(const QImage* self);
int QImage_BitPlaneCount(const QImage* self);
unsigned int QImage_Color(const QImage* self, int i);
void QImage_SetColor(QImage* self, int i, unsigned int c);
void QImage_SetColorCount(QImage* self, int colorCount);
bool QImage_AllGray(const QImage* self);
bool QImage_IsGrayscale(const QImage* self);
unsigned char* QImage_Bits(QImage* self);
const unsigned char* QImage_Bits2(const QImage* self);
const unsigned char* QImage_ConstBits(const QImage* self);
ptrdiff_t QImage_SizeInBytes(const QImage* self);
unsigned char* QImage_ScanLine(QImage* self, int param1);
const unsigned char* QImage_ScanLine2(const QImage* self, int param1);
const unsigned char* QImage_ConstScanLine(const QImage* self, int param1);
ptrdiff_t QImage_BytesPerLine(const QImage* self);
bool QImage_Valid(const QImage* self, int x, int y);
bool QImage_Valid2(const QImage* self, const QPoint* pt);
int QImage_PixelIndex(const QImage* self, int x, int y);
int QImage_PixelIndex2(const QImage* self, const QPoint* pt);
unsigned int QImage_Pixel(const QImage* self, int x, int y);
unsigned int QImage_Pixel2(const QImage* self, const QPoint* pt);
void QImage_SetPixel(QImage* self, int x, int y, unsigned int index_or_rgb);
void QImage_SetPixel2(QImage* self, const QPoint* pt, unsigned int index_or_rgb);
QColor* QImage_PixelColor(const QImage* self, int x, int y);
QColor* QImage_PixelColor2(const QImage* self, const QPoint* pt);
void QImage_SetPixelColor(QImage* self, int x, int y, const QColor* c);
void QImage_SetPixelColor2(QImage* self, const QPoint* pt, const QColor* c);
libqt_list /* of unsigned int */ QImage_ColorTable(const QImage* self);
void QImage_SetColorTable(QImage* self, const libqt_list /* of unsigned int */ colors);
double QImage_DevicePixelRatio(const QImage* self);
void QImage_SetDevicePixelRatio(QImage* self, double scaleFactor);
QSizeF* QImage_DeviceIndependentSize(const QImage* self);
void QImage_Fill(QImage* self, unsigned int pixel);
void QImage_Fill2(QImage* self, const QColor* color);
void QImage_Fill3(QImage* self, int color);
bool QImage_HasAlphaChannel(const QImage* self);
void QImage_SetAlphaChannel(QImage* self, const QImage* alphaChannel);
QImage* QImage_CreateAlphaMask(const QImage* self);
QImage* QImage_CreateHeuristicMask(const QImage* self);
QImage* QImage_CreateMaskFromColor(const QImage* self, unsigned int color);
QImage* QImage_Scaled(const QImage* self, int w, int h);
QImage* QImage_Scaled2(const QImage* self, const QSize* s);
QImage* QImage_ScaledToWidth(const QImage* self, int w);
QImage* QImage_ScaledToHeight(const QImage* self, int h);
QImage* QImage_Transformed(const QImage* self, const QTransform* matrix);
QTransform* QImage_TrueMatrix(const QTransform* param1, int w, int h);
QImage* QImage_Mirrored(const QImage* self);
QImage* QImage_RgbSwapped(const QImage* self);
void QImage_Mirror(QImage* self);
void QImage_RgbSwap(QImage* self);
void QImage_InvertPixels(QImage* self);
QColorSpace* QImage_ColorSpace(const QImage* self);
QImage* QImage_ConvertedToColorSpace(const QImage* self, const QColorSpace* param1);
void QImage_ConvertToColorSpace(QImage* self, const QColorSpace* param1);
void QImage_SetColorSpace(QImage* self, const QColorSpace* colorSpace);
QImage* QImage_ColorTransformed(const QImage* self, const QColorTransform* transform);
void QImage_ApplyColorTransform(QImage* self, const QColorTransform* transform);
bool QImage_Load(QImage* self, QIODevice* device, const char* format);
bool QImage_Load2(QImage* self, const libqt_string fileName);
bool QImage_LoadFromData(QImage* self, libqt_string data);
bool QImage_LoadFromData2(QImage* self, const unsigned char* buf, int lenVal);
bool QImage_LoadFromData3(QImage* self, const libqt_string data);
bool QImage_Save(const QImage* self, const libqt_string fileName);
bool QImage_Save2(const QImage* self, QIODevice* device);
QImage* QImage_FromData(libqt_string data);
QImage* QImage_FromData2(const unsigned char* data, int size);
void QImage_Delete(QImage* self);