QtBeef/src/Qt/qimage.bf

extension CQt
{
	[LinkName("QImage_new")]
	public static extern QImage_Ptr QImage_new();
	[LinkName("QImage_new2")]
	public static extern QImage_Ptr QImage_new2(void** size, QImage_Format format);
	[LinkName("QImage_new3")]
	public static extern QImage_Ptr QImage_new3(c_int width, c_int height, QImage_Format format);
	[LinkName("QImage_new4")]
	public static extern QImage_Ptr QImage_new4(c_uchar* data, c_int width, c_int height, QImage_Format format);
	[LinkName("QImage_new5")]
	public static extern QImage_Ptr QImage_new5(c_uchar* data, c_int width, c_int height, QImage_Format format);
	[LinkName("QImage_new6")]
	public static extern QImage_Ptr QImage_new6(c_uchar* data, c_int width, c_int height, void* bytesPerLine, QImage_Format format);
	[LinkName("QImage_new7")]
	public static extern QImage_Ptr QImage_new7(c_uchar* data, c_int width, c_int height, void* bytesPerLine, QImage_Format format);
	[LinkName("QImage_new8")]
	public static extern QImage_Ptr QImage_new8(c_char** xpm);
	[LinkName("QImage_new9")]
	public static extern QImage_Ptr QImage_new9(libqt_string fileName);
	[LinkName("QImage_new10")]
	public static extern QImage_Ptr QImage_new10(void** param1);
	[LinkName("QImage_new11")]
	public static extern QImage_Ptr QImage_new11(c_uchar* data, c_int width, c_int height, QImage_Format format, c_intptr cleanupFunction);
	[LinkName("QImage_new12")]
	public static extern QImage_Ptr QImage_new12(c_uchar* data, c_int width, c_int height, QImage_Format format, c_intptr cleanupFunction, void* cleanupInfo);
	[LinkName("QImage_new13")]
	public static extern QImage_Ptr QImage_new13(c_uchar* data, c_int width, c_int height, QImage_Format format, c_intptr cleanupFunction);
	[LinkName("QImage_new14")]
	public static extern QImage_Ptr QImage_new14(c_uchar* data, c_int width, c_int height, QImage_Format format, c_intptr cleanupFunction, void* cleanupInfo);
	[LinkName("QImage_new15")]
	public static extern QImage_Ptr QImage_new15(c_uchar* data, c_int width, c_int height, void* bytesPerLine, QImage_Format format, c_intptr cleanupFunction);
	[LinkName("QImage_new16")]
	public static extern QImage_Ptr QImage_new16(c_uchar* data, c_int width, c_int height, void* bytesPerLine, QImage_Format format, c_intptr cleanupFunction, void* cleanupInfo);
	[LinkName("QImage_new17")]
	public static extern QImage_Ptr QImage_new17(c_uchar* data, c_int width, c_int height, void* bytesPerLine, QImage_Format format, c_intptr cleanupFunction);
	[LinkName("QImage_new18")]
	public static extern QImage_Ptr QImage_new18(c_uchar* data, c_int width, c_int height, void* bytesPerLine, QImage_Format format, c_intptr cleanupFunction, void* cleanupInfo);
	[LinkName("QImage_new19")]
	public static extern QImage_Ptr QImage_new19(libqt_string fileName, c_char* format);
	[LinkName("QImage_Delete")]
	public static extern void QImage_Delete(QImage_Ptr self);
	[LinkName("QImage_OperatorAssign")]
	public static extern void QImage_OperatorAssign(void* self, void** param1);
	[LinkName("QImage_Swap")]
	public static extern void QImage_Swap(void* self, void** other);
	[LinkName("QImage_IsNull")]
	public static extern bool QImage_IsNull(void* self);
	[LinkName("QImage_DevType")]
	public static extern c_int QImage_DevType(void* self);
	[LinkName("QImage_OperatorEqual")]
	public static extern bool QImage_OperatorEqual(void* self, void** param1);
	[LinkName("QImage_OperatorNotEqual")]
	public static extern bool QImage_OperatorNotEqual(void* self, void** param1);
	[LinkName("QImage_ToQvariant")]
	public static extern void* QImage_ToQvariant(void* self);
	[LinkName("QImage_Detach")]
	public static extern void QImage_Detach(void* self);
	[LinkName("QImage_IsDetached")]
	public static extern bool QImage_IsDetached(void* self);
	[LinkName("QImage_Copy")]
	public static extern void* QImage_Copy(void* self);
	[LinkName("QImage_Copy2")]
	public static extern void* QImage_Copy2(void* self, c_int x, c_int y, c_int w, c_int h);
	[LinkName("QImage_Format")]
	public static extern QImage_Format QImage_Format(void* self);
	[LinkName("QImage_ConvertToFormat")]
	public static extern void* QImage_ConvertToFormat(void* self, QImage_Format f);
	[LinkName("QImage_ConvertToFormat2")]
	public static extern void* QImage_ConvertToFormat2(void* self, QImage_Format f, void** colorTable);
	[LinkName("QImage_ReinterpretAsFormat")]
	public static extern bool QImage_ReinterpretAsFormat(void* self, QImage_Format f);
	[LinkName("QImage_ConvertedTo")]
	public static extern void* QImage_ConvertedTo(void* self, QImage_Format f);
	[LinkName("QImage_ConvertTo")]
	public static extern void QImage_ConvertTo(void* self, QImage_Format f);
	[LinkName("QImage_Width")]
	public static extern c_int QImage_Width(void* self);
	[LinkName("QImage_Height")]
	public static extern c_int QImage_Height(void* self);
	[LinkName("QImage_Size")]
	public static extern void* QImage_Size(void* self);
	[LinkName("QImage_Rect")]
	public static extern void* QImage_Rect(void* self);
	[LinkName("QImage_Depth")]
	public static extern c_int QImage_Depth(void* self);
	[LinkName("QImage_ColorCount")]
	public static extern c_int QImage_ColorCount(void* self);
	[LinkName("QImage_BitPlaneCount")]
	public static extern c_int QImage_BitPlaneCount(void* self);
	[LinkName("QImage_Color")]
	public static extern c_uint QImage_Color(void* self, c_int i);
	[LinkName("QImage_SetColor")]
	public static extern void QImage_SetColor(void* self, c_int i, c_uint c);
	[LinkName("QImage_SetColorCount")]
	public static extern void QImage_SetColorCount(void* self, c_int colorCount);
	[LinkName("QImage_AllGray")]
	public static extern bool QImage_AllGray(void* self);
	[LinkName("QImage_IsGrayscale")]
	public static extern bool QImage_IsGrayscale(void* self);
	[LinkName("QImage_Bits")]
	public static extern c_uchar* QImage_Bits(void* self);
	[LinkName("QImage_Bits2")]
	public static extern c_uchar* QImage_Bits2(void* self);
	[LinkName("QImage_ConstBits")]
	public static extern c_uchar* QImage_ConstBits(void* self);
	[LinkName("QImage_SizeInBytes")]
	public static extern void* QImage_SizeInBytes(void* self);
	[LinkName("QImage_ScanLine")]
	public static extern c_uchar* QImage_ScanLine(void* self, c_int param1);
	[LinkName("QImage_ScanLine2")]
	public static extern c_uchar* QImage_ScanLine2(void* self, c_int param1);
	[LinkName("QImage_ConstScanLine")]
	public static extern c_uchar* QImage_ConstScanLine(void* self, c_int param1);
	[LinkName("QImage_BytesPerLine")]
	public static extern void* QImage_BytesPerLine(void* self);
	[LinkName("QImage_Valid")]
	public static extern bool QImage_Valid(void* self, c_int x, c_int y);
	[LinkName("QImage_Valid2")]
	public static extern bool QImage_Valid2(void* self, void** pt);
	[LinkName("QImage_PixelIndex")]
	public static extern c_int QImage_PixelIndex(void* self, c_int x, c_int y);
	[LinkName("QImage_PixelIndex2")]
	public static extern c_int QImage_PixelIndex2(void* self, void** pt);
	[LinkName("QImage_Pixel")]
	public static extern c_uint QImage_Pixel(void* self, c_int x, c_int y);
	[LinkName("QImage_Pixel2")]
	public static extern c_uint QImage_Pixel2(void* self, void** pt);
	[LinkName("QImage_SetPixel")]
	public static extern void QImage_SetPixel(void* self, c_int x, c_int y, c_uint index_or_rgb);
	[LinkName("QImage_SetPixel2")]
	public static extern void QImage_SetPixel2(void* self, void** pt, c_uint index_or_rgb);
	[LinkName("QImage_PixelColor")]
	public static extern void* QImage_PixelColor(void* self, c_int x, c_int y);
	[LinkName("QImage_PixelColor2")]
	public static extern void* QImage_PixelColor2(void* self, void** pt);
	[LinkName("QImage_SetPixelColor")]
	public static extern void QImage_SetPixelColor(void* self, c_int x, c_int y, void** c);
	[LinkName("QImage_SetPixelColor2")]
	public static extern void QImage_SetPixelColor2(void* self, void** pt, void** c);
	[LinkName("QImage_ColorTable")]
	public static extern void* QImage_ColorTable(void* self);
	[LinkName("QImage_SetColorTable")]
	public static extern void QImage_SetColorTable(void* self, void** colors);
	[LinkName("QImage_DevicePixelRatio")]
	public static extern double QImage_DevicePixelRatio(void* self);
	[LinkName("QImage_SetDevicePixelRatio")]
	public static extern void QImage_SetDevicePixelRatio(void* self, double scaleFactor);
	[LinkName("QImage_DeviceIndependentSize")]
	public static extern void* QImage_DeviceIndependentSize(void* self);
	[LinkName("QImage_Fill")]
	public static extern void QImage_Fill(void* self, c_uint pixel);
	[LinkName("QImage_Fill2")]
	public static extern void QImage_Fill2(void* self, void** color);
	[LinkName("QImage_Fill3")]
	public static extern void QImage_Fill3(void* self, Qt_GlobalColor color);
	[LinkName("QImage_HasAlphaChannel")]
	public static extern bool QImage_HasAlphaChannel(void* self);
	[LinkName("QImage_SetAlphaChannel")]
	public static extern void QImage_SetAlphaChannel(void* self, void** alphaChannel);
	[LinkName("QImage_CreateAlphaMask")]
	public static extern void* QImage_CreateAlphaMask(void* self);
	[LinkName("QImage_CreateHeuristicMask")]
	public static extern void* QImage_CreateHeuristicMask(void* self);
	[LinkName("QImage_CreateMaskFromColor")]
	public static extern void* QImage_CreateMaskFromColor(void* self, c_uint color);
	[LinkName("QImage_Scaled")]
	public static extern void* QImage_Scaled(void* self, c_int w, c_int h);
	[LinkName("QImage_Scaled2")]
	public static extern void* QImage_Scaled2(void* self, void** s);
	[LinkName("QImage_ScaledToWidth")]
	public static extern void* QImage_ScaledToWidth(void* self, c_int w);
	[LinkName("QImage_ScaledToHeight")]
	public static extern void* QImage_ScaledToHeight(void* self, c_int h);
	[LinkName("QImage_Transformed")]
	public static extern void* QImage_Transformed(void* self, void** matrix);
	[LinkName("QImage_TrueMatrix")]
	public static extern void* QImage_TrueMatrix(void** param1, c_int w, c_int h);
	[LinkName("QImage_Mirrored")]
	public static extern void* QImage_Mirrored(void* self);
	[LinkName("QImage_RgbSwapped")]
	public static extern void* QImage_RgbSwapped(void* self);
	[LinkName("QImage_Mirror")]
	public static extern void QImage_Mirror(void* self);
	[LinkName("QImage_RgbSwap")]
	public static extern void QImage_RgbSwap(void* self);
	[LinkName("QImage_InvertPixels")]
	public static extern void QImage_InvertPixels(void* self);
	[LinkName("QImage_ColorSpace")]
	public static extern void* QImage_ColorSpace(void* self);
	[LinkName("QImage_ConvertedToColorSpace")]
	public static extern void* QImage_ConvertedToColorSpace(void* self, void** param1);
	[LinkName("QImage_ConvertToColorSpace")]
	public static extern void QImage_ConvertToColorSpace(void* self, void** param1);
	[LinkName("QImage_SetColorSpace")]
	public static extern void QImage_SetColorSpace(void* self, void** colorSpace);
	[LinkName("QImage_ColorTransformed")]
	public static extern void* QImage_ColorTransformed(void* self, void** transform);
	[LinkName("QImage_ApplyColorTransform")]
	public static extern void QImage_ApplyColorTransform(void* self, void** transform);
	[LinkName("QImage_Load")]
	public static extern bool QImage_Load(void* self, void** device, c_char* format);
	[LinkName("QImage_Load2")]
	public static extern bool QImage_Load2(void* self, libqt_string fileName);
	[LinkName("QImage_LoadFromData")]
	public static extern bool QImage_LoadFromData(void* self, void* data);
	[LinkName("QImage_LoadFromData2")]
	public static extern bool QImage_LoadFromData2(void* self, c_uchar* buf, c_int lenVal);
	[LinkName("QImage_LoadFromData3")]
	public static extern bool QImage_LoadFromData3(void* self, void** data);
	[LinkName("QImage_Save")]
	public static extern bool QImage_Save(void* self, libqt_string fileName);
	[LinkName("QImage_Save2")]
	public static extern bool QImage_Save2(void* self, void** device);
	[LinkName("QImage_FromData")]
	public static extern void* QImage_FromData(void* data);
	[LinkName("QImage_FromData2")]
	public static extern void* QImage_FromData2(c_uchar* data, c_int size);
